--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -7,19 +7,58 @@
     tools:context=".DefinitionActivity"
     android:orientation="vertical">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/m_appBar"
+        android:layout_width="match_parent"
+        android:background="@color/teal_700"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/Theme.Dictionary.AppBarOverlay"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/btn_back"
+            android:background="@drawable/ic_baseline_home_24"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+
+        <TextView
+            android:id="@+id/tv_title_appbar"
+            android:textSize="23dp"
+            android:text="hahahah"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_speak"
+        android:enabled="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/black2"
+        android:backgroundTint="@color/teal_700"
         android:src="@drawable/ic_speaker_filled_audio_tool"
         app:fabSize="mini"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@android:color/white"
         tools:ignore="VectorDrawableCompat" />
+
     <WebView
-        android:layout_margin="16dp"
+        android:layout_marginTop="?attr/actionBarSize"
         android:id="@+id/tv_definition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
