--- a/app/src/main/res/layout/word_layout.xml
+++ b/app/src/main/res/layout/word_layout.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:elevation="0.6dp"
+    app:cardBackgroundColor="?cardBackground"
     app:cardCornerRadius="6dp"
     app:cardMaxElevation="0.8dp"
-    android:elevation="0.6dp"
-    app:contentPadding="6dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    app:contentPadding="6dp">
 
     <LinearLayout
         android:id="@+id/ll_word"
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="school"
-            android:textColor="@color/black2"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
+
         <TextView
             android:id="@+id/tv_short_definition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="truong hoc, bla bla"
-            android:textColor="@color/black2"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
