--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -4,22 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DefinitionActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".DefinitionActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/m_appBar"
         android:layout_width="match_parent"
-        android:background="@color/teal_700"
         android:layout_height="?attr/actionBarSize"
-        android:theme="@style/Theme.Dictionary.AppBarOverlay"
-        app:layout_constraintTop_toTopOf="parent"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:background="@color/teal_600"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_back"
-            android:background="@drawable/ic_baseline_home_24"
+            android:background="@drawable/ic_baseline_arrow_back_24"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -28,16 +29,24 @@
 
         <TextView
             android:id="@+id/tv_title_appbar"
-            android:textSize="23dp"
-            android:text="hahahah"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="hahahah"
+            android:textColor="@color/white"
+            android:textSize="23dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageButton
+            android:id="@+id/btn_favorite"
+            android:background="@drawable/ic_baseline_star_24"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -45,21 +54,21 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_speak"
-        android:enabled="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/teal_700"
+        android:enabled="false"
         android:src="@drawable/ic_speaker_filled_audio_tool"
         app:fabSize="mini"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/m_appBar"
         app:tint="@android:color/white"
         tools:ignore="VectorDrawableCompat" />
 
     <WebView
-        android:layout_marginTop="?attr/actionBarSize"
         android:id="@+id/tv_definition"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize" />
 </androidx.constraintlayout.widget.ConstraintLayout>
