--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#F3F3F3</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="yellow">#FFC107</color>
 </resources>
